force-spa-testschema/src/objects/GuildMembership__c.object
<CustomObject>
    <fields>
        <fullName>Guild__c</fullName>
        <label>Guild</label>
        <referenceTo>Guild__c</referenceTo>
        <relationshipLabel>Guild Memberships</relationshipLabel>
        <relationshipName>GuildMemberships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Apprentice</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Journeyman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SinceDate__c</fullName>
        <label>Since Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GuildMemberships</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Guild Membership</label>
    <nameField>
        <displayFormat>GM-{000000}</displayFormat>
        <label>Guild Membership Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guild Memberships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>